--- a/shooting.html
+++ b/shooting.html
@@ -958,6 +958,378 @@
             <h3>-</h3>
           </div>
         </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/men-of-valor.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Men of Valor</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/rambo-the-video-game.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Rambo The Video Game</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/shadow-ops-red-mercury.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Shadow Ops Red Mercury</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/sniper-art-of-victory.jpeg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Sniper - Art of Victory</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/sniper-elite-berlin-1945.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Sniper Elite - Berlin 1945</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/sniper-elite-v2.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Sniper Elite V2</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/sniper-elite-III-afrika.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Sniper Elite III - Afrika</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/sniper-ghost-warrior.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Sniper Ghost Warrior</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/sniper-ghost-warrior-2.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Sniper Ghost Warrior 2</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/sniper-ghost-warrior-contracts.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Sniper Ghost Warrior Contracts</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/sniper-ghost-warrior-contracts-2.avif"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Sniper Ghost Warrior Contracts 2</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/spec-ops-the-line.png" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Spec Ops: The Line</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/star-wars-republic-commando.webp"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Star Wars - Republic Commando</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/star-wars-battlefront.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Star Wars Battlefront</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/star-wars-battlefront-2.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Star Wars Battlefront 2</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/terrorist-takedown.jpeg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Terrorist Takedown</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/terrorist-takedown-conflict-in-mogadishu.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Terrorist Takedown - Conflict in Mogadishu</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/terrorist-takedown-covert-operations.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Terrorist Takedown - Covert Operations</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/terrorist-takedown-payback.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Terrorist Takedown - Payback</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/terrorist-takedown-war-in-colombia.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Terrorist Takedown - War in Colombia</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/terrorist-takedown-2.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Terrorist Takedown 2</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/tom-clancy's-ghost-recon.webp" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Tom Clancy's Ghost Recon</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/tom-clancy's-ghost-recon-advanced-warfigther.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Tom Clancy's Ghost Recon: Advanced Warfigther</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/tom-clancy's-ghost-recon-advanced-warfigther-2.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Tom Clancy's Ghost Recon: Advanced Warfigther 2</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/tom-clancy's-ghost-recon-future-soldier.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Tom Clancy's Ghost Recon: Future Soldier</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/tom-clancy's-rainbow-six-lockdown.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Tom Clancy's Rainbow Six: Lockdown</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/vietcong.png" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Vietcong</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/vietcong-2.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Vietcong 2</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/wanted-weapons-of-fate.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Wanted - Weapons of Fate</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/world-war-II-combat-iwo-jima.jpeg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>World War II: Combat - Iwo Jima</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/world-war-II-combat-road-to-berlin.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>World War II: Combat - Road to Berlin</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/world-war-II-sniper-call-to-victory.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>World War II: Sniper - Call To Victory</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/shooting/world-war-z.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>World War Z</h2>
+            <h3>-</h3>
+          </div>
+        </div>
       </div>
     </section>
     <!-- Shooting Section End-->
