--- a/racing.html
+++ b/racing.html
@@ -46,8 +46,13 @@
             <li><a href="infant.html">Infantil</a></li>
             <li><a href="simulation.html">Simulação</a></li>
             <li><a href="shooting.html">Tiro/Guerra</a></li>
-            <li><a href="https://docs.google.com/spreadsheets/d/1mcFCpCfGAgobrLXBVEJjqaxDvtA_TnjtLoZVLFL3OD4/edit?usp=sharing"
-          target="_blank">Lista Completa</a></li>
+            <li>
+              <a
+                href="https://docs.google.com/spreadsheets/d/1mcFCpCfGAgobrLXBVEJjqaxDvtA_TnjtLoZVLFL3OD4/edit?usp=sharing"
+                target="_blank"
+                >Lista Completa</a
+              >
+            </li>
           </div>
         </div>
 
@@ -71,7 +76,7 @@
       <div class="games-content">
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/4x4-evo2.png" alt=""/>
+            <img src="./assets/racing/4x4-evo2.png" alt="" />
           </a>
           <div class="box-text">
             <h2>4X4 EVO 2</h2>
@@ -81,7 +86,7 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/asphalt-streetstorm.webp" alt=""/>
+            <img src="./assets/racing/asphalt-streetstorm.webp" alt="" />
           </a>
           <div class="box-text">
             <h2>Asphalt Street Storm Racing</h2>
@@ -91,7 +96,7 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/bang-bang-racing.png" alt=""/>
+            <img src="./assets/racing/bang-bang-racing.png" alt="" />
           </a>
           <div class="box-text">
             <h2>Bang Bang Racing</h2>
@@ -101,232 +106,441 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/carnage-racing.png" alt=""/>
+            <img src="./assets/racing/carnage-racing.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Carnage Racing</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Carnage Racing</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/cars.png" alt=""/>
+            <img src="./assets/racing/cars.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Cars</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Cars</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/cars-mater-national.png" alt=""/>
+            <img src="./assets/racing/cars-mater-national.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Cars Mater National Championship</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Cars Mater National Championship</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/cars2.png" alt=""/>
+            <img src="./assets/racing/cars2.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Cars 2</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Cars 2</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/chaves-kart.webp" alt=""/>
+            <img src="./assets/racing/chaves-kart.webp" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Chaves Kart</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Chaves Kart</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/choro-q-advance-2.png" alt=""/>
+            <img src="./assets/racing/choro-q-advance-2.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Choro Q Advance 2</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Choro Q Advance 2</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/colin-mcrae-rally-2.webp" alt=""/>
+            <img src="./assets/racing/colin-mcrae-rally-2.webp" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Colin McRae Rally 2.0</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Colin McRae Rally 2.0</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/colin-mcrae-rally-remastered.jpg" alt=""/>
+            <img
+              src="./assets/racing/colin-mcrae-rally-remastered.jpg"
+              alt=""
+            />
           </a>
-            <div class="box-text">
-              <h2>Colin McRae Rally Remastered</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Colin McRae Rally Remastered</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/corvette.jpg" alt=""/>
+            <img src="./assets/racing/corvette.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Corvette</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Corvette</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/downhill-domination.png" alt=""/>
+            <img src="./assets/racing/downhill-domination.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Downhill Domination</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Downhill Domination</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/f1-06.jpg" alt=""/>
+            <img src="./assets/racing/f1-06.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>F1 2006</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>F1 2006</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/f1-2014.jpg" alt=""/>
+            <img src="./assets/racing/f1-2014.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>F1 2014</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>F1 2014</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/f1-race-stars.jpg" alt=""/>
+            <img src="./assets/racing/f1-race-stars.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>F1 Race Stars</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>F1 Race Stars</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/flatout.jpg" alt=""/>
+            <img src="./assets/racing/flatout.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>FlatOut</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>FlatOut</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/flatout-2.jpg" alt=""/>
+            <img src="./assets/racing/flatout-2.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>FlatOut 2</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>FlatOut 2</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/ford-offroad.jpg" alt=""/>
+            <img src="./assets/racing/ford-offroad.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Ford Racing: Off Road</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Ford Racing: Off Road</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/ford-streetracing.jpg" alt=""/>
+            <img src="./assets/racing/ford-streetracing.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Ford Street Racing</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Ford Street Racing</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/garfield-kart.jpeg" alt=""/>
+            <img src="./assets/racing/garfield-kart.jpeg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Garfield Kart</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Garfield Kart</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/hill-climb-racing-2.png" alt=""/>
+            <img src="./assets/racing/hill-climb-racing-2.png" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Hill Climb Racing 2</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Hill Climb Racing 2</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/horizon-chase-turbo.jpg" alt=""/>
+            <img src="./assets/racing/horizon-chase-turbo.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Horizon Chase Turbo</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Horizon Chase Turbo</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/jungle-racers.jpg" alt=""/>
+            <img src="./assets/racing/jungle-racers.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Jungle Racers</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Jungle Racers</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/madagascar-kartz.jpg" alt=""/>
+            <img src="./assets/racing/madagascar-kartz.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Madagascar Kartz</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Madagascar Kartz</h2>
+            <h3>-</h3>
+          </div>
         </div>
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/racing/mario-kart-ds.jpg" alt=""/>
+            <img src="./assets/racing/mario-kart-ds.jpg" alt="" />
           </a>
-            <div class="box-text">
-              <h2>Mario Kart DS</h2>
-              <h3>-</h3>
-            </div>
+          <div class="box-text">
+            <h2>Mario Kart DS</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/mario-kart-super-circuit.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Mario Kart Super Circuit</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/mashed-drive-to-survive.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Mashed - Drive To Survive</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/midnight-club-3-DUB-Edition.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Midnight Club 3: DUB Edition</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/mini-motor-racing-EVO.webp" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Mini Motor Racing EVO</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/moto-GP-3.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Moto GP 3</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/MX-vs.-ATV-Unleashed.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>MX vs. ATV Unleashed</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/need-for-speed-carbon.png" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Need for Speed Carbon</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/need-for-speed-hot-pursuit.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Need for Speed Hot Pursuit</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/racing/need-for-speed-most-wanted-2005.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Need for Speed Most Wanted 2005</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/need-for-speed-the-run.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Need for Speed The Run</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/need-for-speed-underground.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Need for Speed Underground</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/racing/need-for-speed-underground-2.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Need for Speed Underground 2</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/psebay.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Psebay</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/resoraki-the-racing.png" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Resoraki - The Racing</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/SEGA-rally-revo.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>SEGA Rally Revo</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/speed-racer.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Speed Racer</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/test-drive-unlimited.png" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Test Drive Unlimited</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/trackmania-nations-forever.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>TrackMania Nations Forever</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/turbo-fast.jpg" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Turbo Fast</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/racing/yamaha-supercross.png" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Yamaha Supercross</h2>
+            <h3>-</h3>
+          </div>
         </div>
       </div>
     </section>
