--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
           <div class="swiper-slide">
             <div class="box">
               <a href="#">
-                <img src="./assets/racing/4x4-evo2.png" alt=""/>
+                <img src="./assets/racing/4x4-evo2.png" alt="" />
               </a>
               <div class="box-text">
                 <h2>4X4 EVO 2</h2>
@@ -264,7 +264,7 @@
           <div class="swiper-slide">
             <div class="box">
               <a href="#">
-                <img src="./assets/racing/bang-bang-racing.png" alt=""/>
+                <img src="./assets/racing/bang-bang-racing.png" alt="" />
               </a>
               <div class="box-text">
                 <h2>Bang Bang Racing</h2>
@@ -382,7 +382,10 @@
           <div class="swiper-slide">
             <div class="box">
               <a href="#">
-                <img src="./assets/strategy/age-of-mythology-tale-of-the-dragon.jpg" alt="" />
+                <img
+                  src="./assets/strategy/age-of-mythology-tale-of-the-dragon.jpg"
+                  alt=""
+                />
               </a>
               <div class="box-text">
                 <h2>Age of Mythology Tale of the Dragon</h2>
@@ -394,7 +397,10 @@
           <div class="swiper-slide">
             <div class="box">
               <a href="#">
-                <img src="./assets/strategy/age-of-mythology-the-titans.jpg" alt="" />
+                <img
+                  src="./assets/strategy/age-of-mythology-the-titans.jpg"
+                  alt=""
+                />
               </a>
               <div class="box-text">
                 <h2>Age of Mythology The Titans</h2>
@@ -422,6 +428,18 @@
               </a>
               <div class="box-text">
                 <h2>Anno 1701</h2>
+                <h3>-</h3>
+              </div>
+            </div>
+          </div>
+          <!-- Slide -->
+          <div class="swiper-slide">
+            <div class="box">
+              <a href="#">
+                <img src="./assets/strategy/anno-1800.jpg" alt="" />
+              </a>
+              <div class="box-text">
+                <h2>Anno 1800</h2>
                 <h3>-</h3>
               </div>
             </div>
@@ -483,7 +501,10 @@
           <div class="swiper-slide">
             <div class="box">
               <a href="#">
-                <img src="./assets/infant/spongebob -squarepants-creature-from-the-krusty-krab.jpg" alt="" />
+                <img
+                  src="./assets/infant/spongebob -squarepants-creature-from-the-krusty-krab.jpg"
+                  alt=""
+                />
               </a>
               <div class="box-text">
                 <h2>SpongeBob SquarePants: Creature from the Krusty Krab</h2>
@@ -524,7 +545,10 @@
           <div class="swiper-slide">
             <div class="box">
               <a href="#">
-                <img src="./assets/simulation/construction-simulator-2012.jpg" alt="" />
+                <img
+                  src="./assets/simulation/construction-simulator-2012.jpg"
+                  alt=""
+                />
               </a>
               <div class="box-text">
                 <h2>Construction Simulator 2012</h2>
@@ -572,7 +596,10 @@
           <div class="swiper-slide">
             <div class="box">
               <a href="#">
-                <img src="./assets/simulation/hunting-unlimited-2010.webp" alt="" />
+                <img
+                  src="./assets/simulation/hunting-unlimited-2010.webp"
+                  alt=""
+                />
               </a>
               <div class="box-text">
                 <h2>Hunting Simulator 2010</h2>
@@ -613,7 +640,10 @@
           <div class="swiper-slide">
             <div class="box">
               <a href="#">
-                <img src="./assets/shooting/arma-cold-war-assault.webp" alt="" />
+                <img
+                  src="./assets/shooting/arma-cold-war-assault.webp"
+                  alt=""
+                />
               </a>
               <div class="box-text">
                 <h2>ARMA Cold War Assault</h2>
