--- a/shooting.html
+++ b/shooting.html
@@ -482,6 +482,16 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
+            <img src="./assets/shooting/call-of-duty-infinite-warfare.webp" alt="" />
+          </a>
+          <div class="box-text">
+            <h2>Call of Duty Infinite Warfare</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
             <img
               src="./assets/shooting/call-of-duty-modern-warfare-2.PNG"
               alt=""
@@ -544,7 +554,7 @@
             <img src="./assets/shooting/chrome-spec-force.jpg" alt="" />
           </a>
           <div class="box-text">
-            <h2>Call of Duty WWII</h2>
+            <h2>Chrome Spec Force</h2>
             <h3>-</h3>
           </div>
         </div>
