--- a/strategy.html
+++ b/strategy.html
@@ -128,6 +128,16 @@
               <h3>-</h3>
             </div>
         </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img src="./assets/strategy/anno-1800.jpg" alt=""/>
+          </a>
+            <div class="box-text">
+              <h2>Anno 1800</h2>
+              <h3>-</h3>
+            </div>
+        </div>
       </div>
     </section>
     <!-- Strategy Section End-->
