--- a/shooting.html
+++ b/shooting.html
@@ -482,7 +482,10 @@
         <!-- Box -->
         <div class="box">
           <a href="#">
-            <img src="./assets/shooting/call-of-duty-infinite-warfare.webp" alt="" />
+            <img
+              src="./assets/shooting/call-of-duty-infinite-warfare.webp"
+              alt=""
+            />
           </a>
           <div class="box-text">
             <h2>Call of Duty Infinite Warfare</h2>
@@ -1245,6 +1248,19 @@
           </a>
           <div class="box-text">
             <h2>Tom Clancy's Ghost Recon: Future Soldier</h2>
+            <h3>-</h3>
+          </div>
+        </div>
+        <!-- Box -->
+        <div class="box">
+          <a href="#">
+            <img
+              src="./assets/shooting/tom-clancys-ghost-recon-wildlands.jpg"
+              alt=""
+            />
+          </a>
+          <div class="box-text">
+            <h2>Tom Clancy's Ghost Recon Wildlands</h2>
             <h3>-</h3>
           </div>
         </div>
